syntax = "proto3";

package protos;
option go_package = "orch-go/gen/protos;protos";
option csharp_namespace = "Core";

import "custom_types.proto";
import "google/protobuf/empty.proto";
import "loan.proto";

service LoanAnalyticService {
  rpc ProcessGetAll (GetAllRequest) returns (GetAllLoansResponse);
  rpc ProcessGetById (GetLoanByIdRequest) returns (LoanModel);
  rpc ProcessGetByIds (GetLoanByIdsRequest) returns (GetAllLoansResponse);
  rpc ProcessGetByCustomer (GetLoansByCustomerRequest) returns (GetAllLoansResponse);
  rpc ProcessGetCount (google.protobuf.Empty) returns (CountResponse);
  rpc ProcessGetCountByStatus (GetLoanCountByStatusRequest) returns (CountResponse);
}
